--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,11 +1,13 @@
-.footer{
-    border-top: 1px solid #EAECF0;
-    width: 100%;
-   margin: 2rem auto;
-    padding-top: 2rem;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    justify-content: center;
-    align-items: center;
-    place-items: center;
+.footer {
+  border-top: 1px solid #eaecf0;
+  width: 100%;
+  margin: 2rem auto;
+  padding-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+  justify-content: center;
+  align-items: center;
+  place-items: center;
+  color: #667085;
 }
+
