--- a/src/components/BtnLink/btnlink.scss
+++ b/src/components/BtnLink/btnlink.scss
@@ -5,31 +5,32 @@
   margin-top: 2rem;
   row-gap: 1rem;
 
-  a {
-    .btn {
-      width: 90vw;
-      height: 4rem;
-      color: #eaecf0;
-      border-radius: 8px;
-      border: none;
-      text-decoration: none;
-      color: black;
-      font-size: 11px;
-      font-weight: 500;
-      &:hover{
-        cursor: pointer;
-        background: #D0D5DD;
+  .btn {
+    width: 90vw;
+    height: 4rem;
+    background: #eaecf0;
+    border-radius: 8px;
+    border: none;
+    text-decoration: none;
+    color: black;
+    font-size: 11px;
+    font-weight: 500;
+    text-align: center;
+    justify-content: center;
+    p {
+      margin-top: 1.5rem;
     }
+    &:hover {
+      cursor: pointer;
+      background: #d0d5dd;
     }
   }
 }
 
 @media screen and (min-width: 600px) {
-    .btn__group{
-        a{
-            .btn{
-                width: 40vw;
-            }
-        }
+  .btn__group {
+    .btn {
+      width: 40vw;
     }
+  }
 }
