--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -6,6 +6,10 @@
     font-size: 2.4rem;
     margin-top: 4rem;
   }
+  p {
+    font-size: 15px;
+    color: #475467;
+  }
 
   form {
     margin-top: 3rem;
@@ -13,21 +17,24 @@
       display: flex;
       gap: 1rem;
     }
-    .comment{
-        textarea{
-            resize: none;
-            border: 1px solid #d0d5dd;
-            border-radius: 8px;
-            padding: 10px 14px 10px 14px;
-            &:focus{
-                outline: none;
-            }
-            &::placeholder{
-                color: #667085;
-                font-size: 16px;
-                margin-top: -.5rem;
-            }
+    .comment {
+      margin-bottom: 1rem;
+      textarea {
+        resize: none;
+        border: 1px solid #d0d5dd;
+        border-radius: 8px;
+        padding: 10px 14px 10px 14px;
+        font-size: 13px;
+        &:focus {
+          outline: none;
         }
+        &::placeholder {
+          color: #667085;
+          font-size: 13px;
+          margin-top: -0.5rem;
+          font-family: "Inter", sans-serif;
+        }
+      }
     }
     div {
       display: grid;
@@ -39,16 +46,22 @@
         font-size: 14px;
         line-height: 20px;
         font-weight: 550;
-        margin-bottom: .3rem;
+        margin-bottom: 0.3rem;
       }
       .input {
-        margin-bottom: 0.6rem;
+        margin-bottom: 1.5rem;
         border: 1px solid #d0d5dd;
         border-radius: 8px;
         height: 3rem;
         padding: 0px 14px 0px 14px;
-        &:focus{
-            outline: none;
+        font-size: 13px;
+        // width: 100%;
+        &:focus {
+          outline: none;
+        }
+        &::placeholder {
+          color: #667085;
+          font-size: 13px;
         }
       }
     }
@@ -56,6 +69,7 @@
       display: flex;
       justify-content: left;
       align-items: center;
+      margin-bottom: 1rem;
     }
     button {
       margin-top: 1rem;
@@ -67,6 +81,11 @@
       color: white;
       border-radius: 5px;
       background: #1570ef;
+      &:hover {
+        cursor: pointer;
+        filter: brightness(1.1);
+        transition: all 1.2s ease-in-out;
+      }
     }
   }
 }
@@ -75,7 +94,77 @@
   .contact {
     margin-left: 0;
     form {
-      width: 100%;
+      .fullname {
+        display: block;
+      }
+      div {
+        .input {
+          width: 200%;
+        }
+      }
+      button{
+        width: 114%;
+      }
+      .checkbox{
+        width: 114%;
+      }
+      .comment {
+        textarea {
+          width: 200%;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 768px) {
+  .contact {
+    margin-left: 0;
+    form {
+      .fullname{
+        display: block;
+      }
+      div {
+        .input {
+          width: 200%;
+        }
+      }
+      button{
+        width: 108%;
+      }
+      .checkbox{
+        width: 114%;
+      }
+      .comment {
+        textarea {
+          width: 200%;
+        }
+      }
+    }
+  }
+}
+@media screen and (max-width: 1024px) {
+  .contact {
+    margin-left: 0;
+    form {
+      .fullname {
+        display: block;
+      }
+      div {
+        .input {
+          width: 200%;
+        }
+      }
+      button{
+        width: 108%;
+      }
+      .checkbox{
+        width: 114%;
+      }
+      .comment {
+        textarea {
+          width: 200%;
+        }
+      }
     }
   }
 }
